--- a/dashboard/templates/cards/sleep_day.html
+++ b/dashboard/templates/cards/sleep_day.html
@@ -8,15 +8,47 @@
 {% endblock %}
 
 {% block title %}
-    {% if total %}
-        {{ total|duration_string }}
-    {% else %}
-        {% trans "None" %}
+{% if sleeps|length > 0 %}
+<div id="sleep-days-carousel" class="carousel slide" data-interval="false">
+    <div class="carousel-inner">
+        {% for sleep in sleeps %}
+            <div class="carousel-item{% if forloop.counter == 1 %} active{% endif %}">
+                <div class="last-sleep-method text-center">
+                    {% if sleep.total %}
+                        {{ sleep.total|duration_string:"m" }}
+                    {% else %}
+                        {% trans "None" %}
+                    {% endif %}
+                </div>
+                <div class="text-center small">
+                    {% if sleep.count > 0 %}
+                        {% blocktrans trimmed count counter=sleep.count %}
+                            {{ counter }} sleep
+                        {% plural %}
+                            {{ counter }} sleep
+                        {% endblocktrans %}
+                    {% endif %}
+                </div>
+                {% blocktrans trimmed with since=sleep.date.date|dayssince %}
+                    <div class="text-center small text-muted">
+                        {{ since }}
+                    </div>
+                {% endblocktrans %}
+                </div>
+        {% endfor %}
+    </div>
+    {% if sleeps|length > 1 %}
+    <a class="carousel-control-prev" href="#sleep-days-carousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">{% trans "Previous" %}</span>
+    </a>
+    <a class="carousel-control-next" href="#sleep-days-carousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">{% trans "Next" %}</span>
+    </a>
     {% endif %}
-{% endblock %}
-
-{% block content %}
-    {% if count > 0 %}
-        {% blocktrans %}{{ count }} sleep entries{% endblocktrans %}
-    {% endif %}
+</div>
+{% else %}
+{% trans "None" %}
+{% endif %}
 {% endblock %}
